--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+.footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: aquamarine;
+  text-align: center;
+  color: antiquewhite;
+}
